<resources>
    <string name="app_name">Comp360_final_project</string>
    <string name="logout">Logout</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="event_edit">Edit</string>
    <string name="event_delete">Delete</string>
    <string name="add_event">Add Event</string>
    <string name="sms_permission_status">SMS Permission Status</string>
    <string name="request_sms_permission">Request SMS Permission</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="event_title">Event Title</string>
</resources>